Readme and final touches

--- a/extension/public/_locales/cs/messages.json
+++ b/extension/public/_locales/cs/messages.json
@@ -1,6 +1,6 @@
 {
     "extName": {
-        "message": "DLP pro SaaS",
+        "message": "DLP pro služby typu SaaS",
         "description": "Extension name"
     },
     "extDescription": {
